// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should apply consumer.example.yml 1`] = `
Array [
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "body": Object {
        "username": "iphone-app",
      },
      "endpoint": Object {
        "name": "consumers",
      },
      "method": "POST",
      "type": "create-customer",
    },
    "type": "request",
    "uri": "http://localhost:8001/consumers",
  },
  Object {
    "content": Object {
      "created_at": "___created_at___",
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "username": "iphone-app",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "username": "iphone-app",
      },
      "endpoint": Object {
        "name": "consumers",
      },
      "method": "POST",
      "type": "create-customer",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/consumers",
  },
  Object {
    "params": Object {
      "body": Object {
        "key": "very-secret-key",
      },
      "endpoint": Object {
        "name": "consumer-credentials",
        "params": Object {
          "consumerId": "2b47ba9b-761a-492d-9a0c-000000000001",
          "plugin": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-customer-credential",
    },
    "type": "request",
    "uri": "http://localhost:8001/consumers/2b47ba9b-761a-492d-9a0c-000000000001/key-auth",
  },
  Object {
    "content": Object {
      "consumer_id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "created_at": "___created_at___",
      "id": "2b47ba9b-761a-492d-9a0c-000000000002",
      "key": "very-secret-key",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "key": "very-secret-key",
      },
      "endpoint": Object {
        "name": "consumer-credentials",
        "params": Object {
          "consumerId": "2b47ba9b-761a-492d-9a0c-000000000001",
          "plugin": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-customer-credential",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/consumers/2b47ba9b-761a-492d-9a0c-000000000001/key-auth",
  },
  Object {
    "params": Object {
      "body": Object {
        "group": "foo-group",
      },
      "endpoint": Object {
        "name": "consumer-acls",
        "params": Object {
          "consumerId": "2b47ba9b-761a-492d-9a0c-000000000001",
        },
      },
      "method": "POST",
      "type": "add-customer-acls",
    },
    "type": "request",
    "uri": "http://localhost:8001/consumers/2b47ba9b-761a-492d-9a0c-000000000001/acls",
  },
  Object {
    "content": Object {
      "consumer_id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "created_at": "___created_at___",
      "group": "foo-group",
      "id": "2b47ba9b-761a-492d-9a0c-000000000003",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "group": "foo-group",
      },
      "endpoint": Object {
        "name": "consumer-acls",
        "params": Object {
          "consumerId": "2b47ba9b-761a-492d-9a0c-000000000001",
        },
      },
      "method": "POST",
      "type": "add-customer-acls",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/consumers/2b47ba9b-761a-492d-9a0c-000000000001/acls",
  },
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "consumer": Object {
        "acls": Array [
          Object {
            "ensure": "present",
            "group": "foo-group",
          },
        ],
        "credentials": Array [
          Object {
            "attributes": Object {
              "key": "very-secret-key",
            },
            "ensure": "present",
            "name": "key-auth",
          },
        ],
        "ensure": "present",
        "username": "iphone-app",
      },
      "noop": true,
      "type": "noop-consumer",
    },
    "type": "noop",
  },
  Object {
    "params": Object {
      "credential": Object {
        "attributes": Object {
          "key": "very-secret-key",
        },
        "ensure": "present",
        "name": "key-auth",
      },
      "credentialIdName": "key",
      "noop": true,
      "type": "noop-credential",
    },
    "type": "noop",
  },
  Object {
    "params": Object {
      "acl": Object {
        "ensure": "present",
        "group": "foo-group",
      },
      "noop": true,
      "type": "noop-acl",
    },
    "type": "noop",
  },
]
`;

exports[`should apply consumer.example.yml 2`] = `
"apis: []
consumers:
  - username: iphone-app
    acls:
      - group: foo-group
    credentials:
      - name: key-auth
        attributes:
          key: very-secret-key
plugins: []
"
`;

exports[`should apply global-plugin.example.yml 1`] = `
Array [
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "body": Object {
        "config": Object {
          "credentials": false,
          "max_age": 7000,
          "preflight_continue": false,
        },
        "name": "cors",
      },
      "endpoint": Object {
        "name": "plugins",
        "params": Object {
          "pluginName": "cors",
        },
      },
      "method": "POST",
      "type": "add-global-plugin",
    },
    "type": "request",
    "uri": "http://localhost:8001/plugins",
  },
  Object {
    "content": Object {
      "config": Object {
        "credentials": false,
        "max_age": 7000,
        "preflight_continue": false,
      },
      "created_at": "___created_at___",
      "enabled": true,
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "name": "cors",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "config": Object {
          "credentials": false,
          "max_age": 7000,
          "preflight_continue": false,
        },
        "name": "cors",
      },
      "endpoint": Object {
        "name": "plugins",
        "params": Object {
          "pluginName": "cors",
        },
      },
      "method": "POST",
      "type": "add-global-plugin",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/plugins",
  },
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "noop": true,
      "plugin": Object {
        "attributes": Object {
          "config": Object {
            "credentials": false,
            "max_age": 7000,
            "preflight_continue": false,
          },
        },
        "name": "cors",
      },
      "type": "noop-global-plugin",
    },
    "type": "noop",
  },
]
`;

exports[`should apply global-plugin.example.yml 2`] = `
"apis: []
consumers: []
plugins:
  - name: cors
    attributes:
      enabled: true
      config:
        credentials: false
        max_age: 7000
        preflight_continue: false
"
`;

exports[`should apply key-auth.example.yml 1`] = `
Array [
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "body": Object {
        "username": "iphone-app",
      },
      "endpoint": Object {
        "name": "consumers",
      },
      "method": "POST",
      "type": "create-customer",
    },
    "type": "request",
    "uri": "http://localhost:8001/consumers",
  },
  Object {
    "content": Object {
      "created_at": "___created_at___",
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "username": "iphone-app",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "username": "iphone-app",
      },
      "endpoint": Object {
        "name": "consumers",
      },
      "method": "POST",
      "type": "create-customer",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/consumers",
  },
  Object {
    "params": Object {
      "body": Object {
        "key": "very-secret-key",
      },
      "endpoint": Object {
        "name": "consumer-credentials",
        "params": Object {
          "consumerId": "2b47ba9b-761a-492d-9a0c-000000000001",
          "plugin": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-customer-credential",
    },
    "type": "request",
    "uri": "http://localhost:8001/consumers/2b47ba9b-761a-492d-9a0c-000000000001/key-auth",
  },
  Object {
    "content": Object {
      "consumer_id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "created_at": "___created_at___",
      "id": "2b47ba9b-761a-492d-9a0c-000000000002",
      "key": "very-secret-key",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "key": "very-secret-key",
      },
      "endpoint": Object {
        "name": "consumer-credentials",
        "params": Object {
          "consumerId": "2b47ba9b-761a-492d-9a0c-000000000001",
          "plugin": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-customer-credential",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/consumers/2b47ba9b-761a-492d-9a0c-000000000001/key-auth",
  },
  Object {
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "content": Object {
      "created_at": "___created_at___",
      "hosts": Array [
        "mockbin.com",
      ],
      "http_if_terminated": false,
      "https_only": false,
      "id": "2b47ba9b-761a-492d-9a0c-000000000003",
      "name": "mockbin",
      "preserve_host": false,
      "retries": 5,
      "strip_uri": true,
      "upstream_connect_timeout": 60000,
      "upstream_read_timeout": 60000,
      "upstream_send_timeout": 60000,
      "upstream_url": "http://mockbin.com",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "params": Object {
      "body": Object {
        "config": Object {
          "key_names": Array [
            "very-secret-key",
          ],
        },
        "name": "key-auth",
      },
      "endpoint": Object {
        "name": "api-plugins",
        "params": Object {
          "apiId": "2b47ba9b-761a-492d-9a0c-000000000003",
          "pluginName": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-api-plugin",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis/2b47ba9b-761a-492d-9a0c-000000000003/plugins",
  },
  Object {
    "content": Object {
      "api_id": "2b47ba9b-761a-492d-9a0c-000000000003",
      "config": Object {
        "anonymous": "",
        "hide_credentials": false,
        "key_in_body": false,
        "key_names": Array [
          "very-secret-key",
        ],
        "run_on_preflight": true,
      },
      "created_at": "___created_at___",
      "enabled": true,
      "id": "2b47ba9b-761a-492d-9a0c-000000000004",
      "name": "key-auth",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "config": Object {
          "key_names": Array [
            "very-secret-key",
          ],
        },
        "name": "key-auth",
      },
      "endpoint": Object {
        "name": "api-plugins",
        "params": Object {
          "apiId": "2b47ba9b-761a-492d-9a0c-000000000003",
          "pluginName": "key-auth",
        },
      },
      "method": "POST",
      "type": "add-api-plugin",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/apis/2b47ba9b-761a-492d-9a0c-000000000003/plugins",
  },
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "consumer": Object {
        "credentials": Array [
          Object {
            "attributes": Object {
              "key": "very-secret-key",
            },
            "ensure": "present",
            "name": "key-auth",
          },
        ],
        "ensure": "present",
        "username": "iphone-app",
      },
      "noop": true,
      "type": "noop-consumer",
    },
    "type": "noop",
  },
  Object {
    "params": Object {
      "credential": Object {
        "attributes": Object {
          "key": "very-secret-key",
        },
        "ensure": "present",
        "name": "key-auth",
      },
      "credentialIdName": "key",
      "noop": true,
      "type": "noop-credential",
    },
    "type": "noop",
  },
  Object {
    "params": Object {
      "api": Object {
        "attributes": Object {
          "hosts": Array [
            "mockbin.com",
          ],
          "upstream_url": "http://mockbin.com",
        },
        "ensure": "present",
        "name": "mockbin",
        "plugins": Array [
          Object {
            "attributes": Object {
              "config": Object {
                "key_names": Array [
                  "very-secret-key",
                ],
              },
            },
            "name": "key-auth",
          },
        ],
      },
      "noop": true,
      "type": "noop-api",
    },
    "type": "noop",
  },
  Object {
    "params": Object {
      "noop": true,
      "plugin": Object {
        "attributes": Object {
          "config": Object {
            "key_names": Array [
              "very-secret-key",
            ],
          },
        },
        "name": "key-auth",
      },
      "type": "noop-plugin",
    },
    "type": "noop",
  },
]
`;

exports[`should apply key-auth.example.yml 2`] = `
"apis:
  - name: mockbin
    plugins:
      - name: key-auth
        attributes:
          enabled: true
          config:
            key_names:
              - very-secret-key
            key_in_body: false
            anonymous: ''
            run_on_preflight: true
            hide_credentials: false
    attributes:
      hosts:
        - mockbin.com
      strip_uri: true
      preserve_host: false
      upstream_url: 'http://mockbin.com'
      retries: 5
      upstream_connect_timeout: 60000
      upstream_read_timeout: 60000
      upstream_send_timeout: 60000
      https_only: false
      http_if_terminated: false
consumers:
  - username: iphone-app
    acls: []
    credentials:
      - name: key-auth
        attributes:
          key: very-secret-key
plugins: []
"
`;

exports[`should apply simple-api.example.yml 1`] = `
Array [
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "type": "request",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "content": Object {
      "created_at": "___created_at___",
      "hosts": Array [
        "mockbin.com",
      ],
      "http_if_terminated": false,
      "https_only": false,
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "name": "mockbin",
      "preserve_host": false,
      "retries": 5,
      "strip_uri": true,
      "upstream_connect_timeout": 60000,
      "upstream_read_timeout": 60000,
      "upstream_send_timeout": 60000,
      "upstream_url": "http://mockbin.com",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "hosts": Array [
          "mockbin.com",
        ],
        "name": "mockbin",
        "upstream_url": "http://mockbin.com",
      },
      "endpoint": Object {
        "name": "apis",
      },
      "method": "POST",
      "type": "create-api",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/apis",
  },
  Object {
    "type": "kong-info",
    "version": "___version___",
  },
  Object {
    "params": Object {
      "api": Object {
        "attributes": Object {
          "hosts": Array [
            "mockbin.com",
          ],
          "upstream_url": "http://mockbin.com",
        },
        "ensure": "present",
        "name": "mockbin",
      },
      "noop": true,
      "type": "noop-api",
    },
    "type": "noop",
  },
]
`;

exports[`should apply simple-api.example.yml 2`] = `
"apis:
  - name: mockbin
    plugins: []
    attributes:
      hosts:
        - mockbin.com
      strip_uri: true
      preserve_host: false
      upstream_url: 'http://mockbin.com'
      retries: 5
      upstream_connect_timeout: 60000
      upstream_read_timeout: 60000
      upstream_send_timeout: 60000
      https_only: false
      http_if_terminated: false
consumers: []
plugins: []
"
`;
